--- a/UBMP420-Starter-2-Music-Notes.X/nbproject/Makefile-genesis.properties
+++ b/UBMP420-Starter-2-Music-Notes.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Wed Jul 05 18:25:18 EDT 2023
+#Sun Aug 13 18:56:21 EDT 2023
 default.languagetoolchain.version=2.41
 default.Pack.dfplocation=/Users/johnrampelt/.mchp_packs/Microchip/PIC12-16F1xxx_DFP/1.5.228
-default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=f94c2684ee37278ae3226277b139181f
+default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.41/bin
-host.id=0
-configurations-xml=6eada692371af5a04b541773ffb6933a
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ff725c3d3fe40010a04a4bae132aaf51
-default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=9fced058cfa47be6abe62f69e8f0cfe0
+host.id=31p5-3d6u-ex
+configurations-xml=4452c31598aaf67c2a2a87f41995123b
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/johnrampelt/mirobo/UBMP420/MPLABX/UBMP4.2-Starter-2-Music-Notes/UBMP420-Starter-2-Music-Notes.X
 host.platform=mac
